--- a/s/c/a/h.css
+++ b/s/c/a/h.css
@@ -12,9 +12,9 @@ body{
 
     position: absolute;
 
-    left: 10%;
+    left: 2.5%;
 
-    width: 80%;
+    width: 95%;
     height: 80%;
 
     border: 1px solid black;
@@ -28,13 +28,75 @@ body{
     position: absolute;
 
 
-    width: 22.5%;
+    width: 250px;
     height: 100%;
 
     border: 1px solid red;
 
     border-radius: 50px;
 
+
+}
+
+.anb{
+
+    position: absolute;
+    top: 5%;
+    left: 20%;
+
+    
+    width: 60%;
+    height: 40px;
+    
+    border: none;
+    border-radius: 50px;
+
+    font-size: 28px;
+    font-family: c;
+
+    cursor: pointer;
+
+}
+
+#nl{
+
+    position: relative;
+
+    top: 19%;
+    width: 100%;
+
+    overflow: auto;
+
+}
+
+.n{
+    
+    position: relative;
+
+    left: 5%;
+
+    display: block;
+
+    margin-bottom: 15px;
+
+    width: 90%;
+    height: 50px;
+
+    border: none;
+    border-radius: 50px;
+
+    cursor: pointer;
+
+}
+
+h4{
+
+    position: relative;
+
+    text-align: left;
+    margin-left: 15px;
+
+    width: 80%;
 
 }
 
@@ -42,35 +104,125 @@ body{
 
     position: absolute;
 
-    right: 0;
+    left: 250px;
 
-    width: 77.5%;
+    width: 75.5%;
     height: 100%;
 
     border: 1px solid red;
 
     border-radius: 50px;
 
+}
+
+ul{
+
+    list-style-type: none;
 
 }
+
+.l{
+
+    position: relative;
+    top: -10px;
+    left: 2%;
+
+}
+
+.r{
+
+    position: absolute;
+    top: -1%;
+    right: 5%;
+
+}
+
+li{
+
+    display: inline-block;
+
+}
+
+li button{
+
+    width: 35px;
+    height: 35px;
+    
+    border: none;
+    border-radius: 50px;
+
+    font-family: c;
+    font-size: 17px;
+
+    cursor: pointer;
+
+}
+
+li button p{
+
+    position: relative; 
+
+    top: -8px;
+    
+
+}
+
+
 
 [contenteditable]:empty:not(:focus):before{
 
     content: attr(data-ph);
     color: grey;
 
-  }
+}
+
+[contenteditable]:focus{
+
+    outline: 1px solid transparent;
+
+}
+
+.ntc{
+
+    position: relative;
+
+    top: -5%;
+    left: 5%;
+
+    width: 90%;
+    height: 80%;
+
+    border-radius: 50px;
+
+    background-color: blue;
+
+}
+
+.nt{
+
+    position: relative;
+    top: 6%;
+    left: 6%;
+    width: 87.5%;
+
+    font-family: c;
+    font-size: 20px;
+
+    border: none;
+}
 
 .nc{
 
     position: relative;
 
-    left: 31.5%;
-    top: -5%;
+    left: 6%;
+    top: 10%;
 
-    width: 60%;
-    height: 70%;
+    width: 88%;
+    height: 80%;
 
     color: black;
+
+    overflow: auto;
 
 }
